simple-api/canary/simple-api-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name:  simple-api-ingress
  namespace: api
spec:
  virtualhost:
    fqdn: simple-api.demo.local
  routes:
    - conditions:
      - prefix: / 
      services:
        - name: simple-api-svc
          port: 8080
